@@ -124,7 +124,8 @@ static int add_temp_space_region(udefrag_job_parameters *jp,ULONGLONG lcn,ULONGL
 
 /**
  * @brief This auxiliary routine intended for
- * use in optimize_mft, just to speed things up.
+ * use in optimize_mft and calculate_starting_point,
+ * just to speed things up.
  */
 void release_temp_space_regions_internal(udefrag_job_parameters *jp)
 {
